fix dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,10 +7,6 @@
   scroll-behavior: smooth;
 }
 
-:root {
-  color-scheme: light dark;
-}
-
 html {
   scrollbar-gutter: stable;
 }
@@ -27,6 +23,9 @@ html::-webkit-scrollbar-thumb {
   border-radius: 8px;
   background-color: #efb208;
 }
+html.dark::-webkit-scrollbar-thumb {
+  background-color: #9747FF;
+}
 
 .fill_available {
   width: -webkit-fill-available;
@@ -35,7 +34,11 @@ html::-webkit-scrollbar-thumb {
 }
 
 input {
-  @apply bg-white placeholder:dark:text-purple dark:border-none;
+  @apply bg-white;
+}
+
+.dark input {
+  @apply border-none text-purple;
 }
 
 textarea {
@@ -43,24 +46,33 @@ textarea {
 }
 
 .heading1 {
-  @apply text-5xl font-extrabold leading-[normal] text-black dark:text-white;
+  @apply text-5xl font-extrabold leading-[normal] text-black;
 }
 
 .heading2 {
-  @apply text-[32px] font-normal leading-normal text-black dark:text-white;
+  @apply text-[32px] font-normal leading-normal text-black;
 }
 
 .heading3 {
-  @apply text-[24px] font-normal leading-normal text-black dark:text-white;
+  @apply text-[24px] font-normal leading-normal text-black;
 }
 
 .heading4 {
-  @apply text-base font-extrabold leading-normal tracking-[1.6px] text-black dark:text-white;
+  @apply text-base font-extrabold leading-normal tracking-[1.6px] text-black;
 }
 
 .paragraph {
-  @apply text-lg font-semibold leading-normal tracking-[163.15%] text-black dark:text-white;
+  @apply text-lg font-semibold leading-normal tracking-[163.15%] text-black;
 }
+
+.dark .heading1,
+.dark .heading2,
+.dark .heading3,
+.dark .heading4,
+.dark .paragraph {
+  @apply text-white;
+}
+
 
 .caption {
   @apply text-sm font-semibold leading-normal tracking-[150%];
@@ -83,7 +95,10 @@ textarea {
 }
 
 .dropdown_link {
-  @apply text-base font-bold leading-[171%] px-3 py-1 text-start hover:bg-yellow hover:dark:bg-purple last:hover:bg-red-600 dark:last:hover:bg-red-600 hover:text-white w-full;
+  @apply text-base font-bold leading-[171%] px-3 py-1 text-start hover:bg-yellow last:hover:bg-red-600 hover:text-white w-full;
+}
+.dark .dropdown_link {
+  @apply text-white hover:bg-purple last:hover:bg-red-600;
 }
 
 #navbar {
@@ -151,7 +166,10 @@ textarea {
 }
 
 .btn_profile {
-  @apply text-base font-bold px-3 py-1 bg-yellow dark:bg-purple hover:bg-yellow/75 hover:dark:bg-purple/75 text-white min-w-[110px] rounded-lg text-center;
+  @apply text-base font-bold px-3 py-1 bg-yellow hover:bg-yellow/75 text-white min-w-[110px] rounded-lg text-center;
+}
+.dark .btn_profile {
+  @apply bg-purple hover:bg-purple/75;
 }
 
 #blog_article picture {
